<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="28dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/YTTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="?attr/colorSecondaryContainer"
                android:drawableStart="@drawable/ic_youtube_24dp_layers"
                android:drawablePadding="4dp"
                android:hint="@string/youtube_link_hint"
                android:singleLine="true"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textColorHint="@color/material_dynamic_secondary50" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendYTQueryButton"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="82dp"
                android:layout_marginBottom="14dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                app:icon="@drawable/ic_search_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/infoButton"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="14dp"
                android:text="@string/info"
                android:textAllCaps="true"
                app:icon="@drawable/ic_search_24dp" />

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>