<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".DisplayMessageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:cardCornerRadius="28dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/YTLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:text="@string/fetching_data"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/YTDislikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="48dp"
                android:text="@string/fetching_data"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/YTRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="48dp"
                android:text="@string/fetching_data"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/YTViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="228dp"
                android:layout_marginEnd="48dp"
                android:text="@string/fetching_data"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_thumb_up_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/holo_green_light"
                android:text="@string/video_likes"
                android:textColor="@android:color/holo_green_light"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="92dp"
                android:drawableStart="@drawable/ic_thumb_down_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="@android:color/holo_red_light"
                android:text="@string/video_dislikes"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="228dp"
                android:drawableStart="@drawable/ic_people_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="?attr/colorOnSecondaryContainer"
                android:text="@string/views"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="160dp"
                android:drawableStart="@drawable/ic_star_24dp"
                android:drawablePadding="4dp"
                android:drawableTint="?attr/colorOnSecondaryContainer"
                android:text="@string/overall_rating"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="18sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/thumbnail_View"
                style="@style/ThemeOverlay.App.CircleImageView"
                android:layout_width="match_parent"
                android:layout_height="293dp"
                android:layout_gravity="bottom"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/videoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@android:color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/YTVideoLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/fetching_data"
                android:textColor="@android:color/white" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>